--- a/grafico_faixas.ipynb
+++ b/grafico_faixas.ipynb
@@ -210,18 +210,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "012d25fa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "categories = ['<30 dias', 'De 31 a 60 dias', 'De 61 a 90 dias', 'De 91 a 120 dias', '>120 dias']\n",
-    "dados = [relacao_menor_30_dias, relacao_31_a_60_dias, relacao_61_a_90_dias, relacao_91_a_120_dias, relacao_120_dias]\n",
-    "cores = ['#ff9999','#66b3ff','#99ff99','#17becf', '#ffcc99']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
    "id": "df3c5a2b",
    "metadata": {},
    "outputs": [
@@ -242,6 +230,7 @@
     "categorias = ['<30 dias', '31-60', '61-90', '91-120', '>120']\n",
     "valores = [total_debito_menor_30_dias, total_debito_31_a_60_dias, total_debito_61_a_90_dias, total_debito_91_a_120_dias, total_debito_120_dias]\n",
     "\n",
+    "cores = ['#ff9999','#66b3ff','#99ff99','#17becf', '#ffcc99']\n",
     "bars = ax.bar(categorias, valores, color=cores)\n",
     "ax.set_title('Valores Absolutos por Faixa de Atraso', fontsize=14, fontweight='bold')\n",
     "ax.set_ylabel('Valor (R$)', fontsize=12)\n",
@@ -260,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "f692f5a9",
    "metadata": {},
    "outputs": [
